# turtlebot_lidar

turtlebot/: CMakeLists.txt  package.xml
turtlebot_bringup/: CMakeLists.txt  package.xml
turtlebot_bringup/launch/: lidar.launch  minimal.launch  x4.launch
turtlebot_capabilities/: CMakeLists.txt  package.xml
turtlebot_description/: CMakeLists.txt  package.xml
turtlebot_navigation/: CMakeLists.txt  package.xml
turtlebot_navigation/launch/: amcl_demo.launch  explore.launch  gmapping_demo.launch
turtlebot_tasks/: CMakeLists.txt  package.xml
turtlebot_tasks/launch/: coffee_bot.launch  view_tasks.launch  voice_bot.launch
turtlebot_tasks/map/: map.pgm
turtlebot_tasks/scripts/: coffee_bot.py  patrol_tree.py  voice_cmd.py  voice_coffee_bot.py
turtlebot_teleop/: CMakeLists.txt  package.xml
