<package>
<name>turtlebot_lidar_tasks</name>
<version>0.1.1</version>
<description>Python/ROS Library for Behavior Trees</description>
<maintainer email="patrick@pirobot.org">Patrick Goebel</maintainer>
<license>BSD</license>
<url type="website">http://ros.org/wiki/pi_trees</url>
<url type="bugtracker">https://github.com/pirobot/pi_trees/issues</url>
<author email="patrick@pirobot.org">Patrick Goebel</author>

<buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>

<!-- Exclude for now -->
<!-- exec_depend>python-pygraphviz</exec_depend -->
<!-- exec_depend>python-pygraph</exec_depend -->>

</package>
